--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^4.0.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.2",
     "next-auth": "^4.24.11",
@@ -26,12 +28,14 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
+    "react-leaflet": "^5.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/leaflet": "^1.9.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
